review-apps/deploy-integrates.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-$CI_COMMIT_REF_SLUG
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: integrates-$CI_COMMIT_REF_SLUG
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: review-$CI_COMMIT_REF_SLUG
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: integrates-$CI_COMMIT_REF_SLUG
    spec:
      containers:
      - name: integrates
        image: registry.gitlab.com/fluidsignal/default/integrates/app:$CI_COMMIT_REF_SLUG
        imagePullPolicy: Always
        ports:
        - containerPort: 443
        readinessProbe:
          exec:
            command:
              - sh
              - -ce
              - "curl -sS http://localhost | grep 'FluidIntegrates'"
          initialDelaySeconds: 20
          periodSeconds: 5
          successThreshold: 3
          failureThreshold: 10
      imagePullSecrets:
      - name: gitlab-reg
